# nc_spark_backend

./: .gitignore  benchmark_small_query_parallel.py  celery_app.py  celerybeat-schedule.db  config.xml  main.py  pyproject.toml
app/: models.py  schema.py  session.py
app/api/: aging.py  annotate.py  annotation.py  job_status.py  queue.py  upload.py
benchmark/: bench_annotation.py  benchmark.py  benchmark_full_analysis.tsv  benchmark_full_analysis_1.tsv  benchmark_full_analysis_2.tsv  benchmark_monitoring_progress.tsv  benchmark_status_results.tsv  benchmark_submissions.tsv  benchmark_tasks.py  feather_monitoring_report.tsv  flower_monitoring_report.tsv  gantt_chart.py  gantt_chart_summary.tsv
benchmark/benchmark_results/: bench_summary_20260401T162904.json  bench_summary_20260401T163031.json  bench_summary_20260401T163046.json  bench_summary_20260401T163143.json  bench_summary_20260401T163307.json  bench_summary_20260401T163346.json  bench_summary_20260401T163859.json  bench_summary_20260401T164711.json  bench_summary_20260401T165151.json  bench_summary_20260401T171423.json  bench_summary_20260402T041014.json  bench_summary_20260402T041127.json  bench_summary_20260402T041146.json  bench_summary_20260402T043908.json  bench_summary_20260402T044509.json  bench_tasks_20260401T162904.csv  bench_tasks_20260401T163031.csv  bench_tasks_20260401T163046.csv  bench_tasks_20260401T163143.csv  bench_tasks_20260401T163307.csv  bench_tasks_20260401T163346.csv  bench_tasks_20260401T163859.csv  bench_tasks_20260401T164711.csv  (+6 more)
migrations/: env.py
tables/: annotaion.sql
(+2 files in other folders)
