[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.2",
    "clickhouse-connect>=0.9.2",
    "fastapi[standard]>=0.121.1",
    "fireducks>=1.4.4",
    "flower>=2.0.1",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.38.0",
]
